@@ -46,7 +46,7 @@
    OpenJPEG interface
  ==========================================================
  */
-#include "openjpeg.h"
+#include "openjpeg3d.h"
 
 /*
  ==========================================================
